[gd_scene load_steps=6 format=3 uid="uid://cgq3w6x9m4r8s"]

[ext_resource type="Script" path="res://scripts/test/animated_unit_test.gd" id="1_test_script"]

[sub_resource type="PlaneMesh" id="PlaneMesh_1"]
size = Vector2(20, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.3, 0.7, 0.3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(20, 0.1, 20)

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.5, 0.7, 1, 1)
ambient_light_color = Color(0.8, 0.8, 1, 1)
ambient_light_energy = 0.3

[node name="AnimatedUnitTest" type="Node3D"]
script = ExtResource("1_test_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 5, 10)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 10, 0)
light_energy = 1.0
shadow_enabled = true

[node name="Ground" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("PlaneMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 350.0

[node name="SpawnScout" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Spawn Scout"

[node name="SpawnSoldier" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Spawn Soldier"

[node name="SpawnTank" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Spawn Tank"

[node name="SpawnSniper" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Spawn Sniper"

[node name="SpawnMedic" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Spawn Medic"

[node name="SpawnEngineer" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Spawn Engineer"

[node name="ClearUnits" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Clear All Units"

[node name="TestWeapons" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Test Weapons"

[node name="InfoLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 220.0
offset_top = 20.0
offset_right = 520.0
offset_bottom = 150.0
text = "Animated Unit Test with Weapons
Click buttons to spawn units with weapons
Watch for character models, animations, and weapons

Keys: 1-6 to spawn units, C to clear, D for debug
W to test weapons, T for combat simulation" 